<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcomeScreen"
            type="com.udacity.shoestore.WelcomeScreenFragment" />

    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/tv_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_shoes_store"
        android:layout_marginTop="@dimen/margin_top_tv"
        android:padding="@dimen/tv_padding"
        android:textColor="@color/color_blue"
        android:textAlignment="center"
        android:textSize="@dimen/welcome_tv_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margin_top_lets"
            android:text="@string/let_s_get_started"
            android:textAlignment="center"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/welcome_tv_text_size" />

        <Button
            android:id="@+id/nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:padding="@dimen/tv_padding"
            android:background="@drawable/button_rounded_blue"
            android:text="@string/welcome_text_button"
            android:contentDescription="@string/next_button_description"
            />

    </LinearLayout>





</LinearLayout>

</layout>
