<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="loginScreenViewModel"
            type="com.udacity.shoestore.LoginInFragment" />
    </data>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/liner_layout_margin_top"
        android:backgroundTint="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sign_in_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_in_title"
            style="@style/sign_in_title" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_margin_start_end"
            android:layout_marginTop="@dimen/card_view_margin_top"
            android:layout_marginEnd="@dimen/card_view_margin_start_end"
            android:elevation="@dimen/card_view_elevation"
            app:cardBackgroundColor="@color/empty_color"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/liner_padding">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_email"
                    style="@style/login_tv_email_password_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#9EFFFFFF">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                        android:drawablePadding="@dimen/et_drawable_padding"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        style="@style/edit_text_style" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_tv_password"
                    style="@style/login_tv_email_password_title"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFFFFF">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="20dp"
                        android:hint="@string/login_et_hint"
                        android:inputType="numberPassword"
                        style="@style/edit_text_style"
                        />


                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_btn_text"
            style="@style/login_btn_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/or_text_margin_top"
            android:text="@string/text_or"
            android:textColor="@color/whiteColor"/>


        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_btn_create"
            style="@style/login_btn_style"/>


    </LinearLayout>


</LinearLayout>

</layout>