<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="shoe_item"
            type="com.udacity.shoestore.models.Shoe" />

    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/shoeItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_view_margin_top_start_end"
        android:layout_marginStart="@dimen/card_view_margin_top_start_end"
        android:layout_marginEnd="@dimen/card_view_margin_top_start_end"
        android:background="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/color_blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:contentPadding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/item_list_tv_shoes_name"
                style="@style/text_view_item_list_style" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Shoes name"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/item_list_text_shoes_size"
                style="@style/text_view_item_list_style"
                />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Shoes size"
                style="@style/text_view_item_list_style"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/item_list_text_company"
                style="@style/text_view_item_list_style"
                />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Shoes company"
                style="@style/text_view_item_list_style"

                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/item_list_text_description"
                style="@style/text_view_item_list_style"
                />

            <TextView
                android:id="@+id/iv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Shoes Description"
                style="@style/text_view_item_list_style"
                />
        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
